# kankyo

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
kankyo/: __init__.py  core.py  exceptions.py  schema.py  types.py
tests/: test_env_behavior.py
