[build-system]
requires = ['hatchling>=1.28.0']
build-backend = 'hatchling.build'

[project]
name = "kankyo"
version = "0.1.0"
authors = [{ name = 'depthbomb', email = 'depthbomb@super.fish' }]
repository = "https://github.com/depthbomb/kankyo"
description = "A type-safe, validated, library for loading and retrieving environment variables."
requires-python = ">=3.11"
readme = "README.md"
license = "Apache-2.0"
license-files = ['LICEN[CS]E*']

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]

[project.urls]
Source = "https://github.com/depthbomb/kankyo"
Issues = "https://github.com/depthbomb/kankyo/issues"

[project.optional-dependencies]
test = [
    "pytest>=9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["kankyo"]

[tool.hatch.build.targets.wheel.force-include]
"kankyo/py.typed" = "kankyo/py.typed"

[tool.hatch.build.targets.sdist]
include = [
    "kankyo/__init__.py",
    "kankyo/py.typed",
    "kankyo/core.py",
    "kankyo/exceptions.py",
    "kankyo/schema.py",
    "kankyo/types.py",
]
